--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             grid-gap: 10px;
         }
         .gallery img {
-            width: 100%;
+            width: 70%;
             height: auto;
             border-radius: 8px;
             box-shadow: 0 0 5px rgba(0,0,0,0.1);
@@ -76,7 +76,7 @@
 </head>
 <body>
     <header>
-        <h1>John Doe</h1>
+        <h1>Big Smart</h1>
     </header>
     <div class="container">
         <img src="hh.jpg" alt="Profile Picture" class="profile-img">
